remove checkbox, add citystring

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           </label>
       <input id="password" type="text" placeholder="Пароль">
     </div>
-    <div class="small mb">
-      <label for="accept">
-                Я принимаю правила сервиса
-              </label>
-      <input class="btn" id="send_click" type="checkbox" placeholder="Я принимаю правила сервиса">
+    <div class="mb form-input ">
+      <label class="sr-only" for="city">
+        Город
+          </label>
+      <input id="city" type="text" placeholder="Город">
     </div>
     <button class="btn btn-green">Войти</button>
   </form>
