remove checkbox, add citystring

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </label>
       <input id="city" type="text" placeholder="Город">
     </div>
-    <button class="btn btn-green">Войти</button>
+    <button class="btn btn-green" id="send_click">Войти</button>
   </form>
   <script src="index.js">functionButton</script>
 </body>
