--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Вход</title>
-  <link rel="stylesheet" type="text/css" href="../styles/style.css">
+  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+
+
 
 </head>
 
@@ -32,6 +34,5 @@
     </div>
     <button class="btn btn-green" id="send_click">Войти</button>
   </form>
-  <script src="index.js">functionButton</script>
 </body>
 </html>
