--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Вход</title>
+  <title>My App</title>
+  <!-- Вставьте ваш ключ API Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+  <script>
+    // Инициализация Firebase
+    var firebaseConfig = {
+      apiKey: "AIzaSyDyg3LGtEwqleGS06x-6K-9jYX_0oHyUos",
+      authDomain: "test-76fad.firebaseapp.com",
+      projectId: "test-76fad",
+      storageBucket: "AIzaSyDyg3LGtEwqleGS06x-6K-9jYX_0oHyUos.appspot.com",
+      messagingSenderId: "193534079381",
+      appId: "1:193534079381:web:479b33b4c04e9a69d7469c"
+    };
+    firebase.initializeApp(firebaseConfig);
+  </script>
   <style>
     body {
-    width: 100vw;
+    width: 100vw; 
     height: 100vh;
     margin: 0;
     font: 18px/1.5 sans-serif;
@@ -112,11 +128,6 @@
     
   </style>
 
-
-
-
-
-
 </head>
 
 <body>
@@ -140,7 +151,25 @@
           </label>
       <input id="city" type="text" placeholder="Город">
     </div>
-    <button class="btn btn-green" id="send_click">Войти</button>
-  </form>
+    <!-- <button class="btn btn-green" id="send_click">Войти</button> -->
+    <button class="btn btn-green" onclick="signInWithGithub()">Авторизоваться через Github</button>
+  </form> 
+
+  <script>
+    // Функция для авторизации через Github
+    function signInWithGithub() {
+      var provider = new firebase.auth.GithubAuthProvider();
+      firebase.auth().signInWithPopup(provider).then(function(result) {
+        // Обработка успешной авторизации
+        var user = result.user;
+        console.log(user);
+      }).catch(function(error) {
+        // Обработка ошибки авторизации
+        var errorCode = error.code;
+        var errorMessage = error.message;
+        console.log(error);
+      });
+    }
+  </script>
 </body>
 </html>
