--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,8 @@
       <input id="age" type="text" placeholder="Возраст">
     </div>
     <button class="btn btn-green" onclick="signInWithGithub()">Авторизоваться через Github</button>
+    <button onclick="window.location.href = 'https://test-76fad.firebaseapp.com/auth/github';">Войти с помощью GitHub</button>
+
   </form> 
 
   
